--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             </div>
             <div class="contact-container">
                 <div class="contact-container__text">
-                    서비스 오픈에 대한 알림 받기를 원하신다면,<br>이메일 입력 후 버튼을 클릭해주세요.
+                    서비스 오픈에 대한 알림 받기를 원하신다면,<br>이메일 입력 후 알림 받기 버튼을 클릭해주세요.
                 </div>
                 <div class="contact-container__input">
                     <input type="email" placeholder="이메일을 입력해주세요">
