--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </header>
 
     <main class="main-screen">
-        <section class="whats-section">
+        <section class="whats-section" id="whats">
             <div class="whats-container">
                 <h1 class="whats-main-title">
                     스크롤 한 번, 클릭 한 번이<br>
@@ -108,7 +108,7 @@
                 </div>
             </div>
         </section>
-        <section class="features-section">
+        <section class="features-section" id="features">
             <div class="features-headline">
                 <h2 class="features-headline__title">
                     인터랙티브 기능 예시
