--- a/index.html
+++ b/index.html
@@ -182,10 +182,13 @@
         </section>
     </main>
 
+    <!-- FontAwesome 로드 -->
+    <script src="https://kit.fontawesome.com/a80e3048e2.js" crossorigin="anonymous"></script>
+    
     <!-- ES 모듈 방식으로 분리된 JS 파일 로드 -->
     <script type="module" src="./js/main-interactions.js"></script>
     <script type="module" src="./js/rotate-3d.js"></script>
     <script src="./js/rotate-overlay.js"></script>
-    <script src="https://kit.fontawesome.com/a80e3048e2.js" crossorigin="anonymous"></script>
+    <script src="./js/fontawesome-cleanup.js"></script>
 </body>
 </html>
