--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <div class="rotate-overlay" id="rotate-overlay">
         <div class="rotate-overlay__content">
             <div class="rotate-overlay__icon">
-                <i class="fa-solid fa-rotate-left"></i>
+                <svg width="80" height="80" viewBox="0 0 82.49 83.27" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M80.54,41.78c0,22.4-18.23,40.62-40.62,40.62-15.53,0-29.47-8.64-36.38-22.57-.77-1.55-.14-3.42,1.41-4.19,1.54-.75,3.42-.14,4.19,1.41,5.85,11.78,17.65,19.1,30.79,19.1,18.95,0,34.38-15.42,34.38-34.38,0-18.96-15.42-34.38-34.38-34.38-9.65,0-18.69,4.07-25.14,11.02l4.43-.8c1.68-.3,3.32.82,3.63,2.52.31,1.7-.82,3.32-2.52,3.63l-12.3,2.23c-.19.04-.38.05-.56.05-1.48,0-2.8-1.06-3.07-2.57l-2.24-12.3c-.31-1.7.82-3.32,2.52-3.63,1.69-.29,3.32.82,3.63,2.52l.93,5.1C16.89,6.32,28.03,1.16,39.91,1.16c22.4,0,40.62,18.23,40.62,40.62h0Z" fill="currentColor"/>
+                </svg>
             </div>
             <div class="rotate-overlay__title">
                 스마트폰을 가로모드로 전환해주세요!
@@ -182,13 +184,9 @@
         </section>
     </main>
 
-    <!-- FontAwesome 로드 -->
-    <script src="https://kit.fontawesome.com/a80e3048e2.js" crossorigin="anonymous"></script>
-    
     <!-- ES 모듈 방식으로 분리된 JS 파일 로드 -->
     <script type="module" src="./js/main-interactions.js"></script>
     <script type="module" src="./js/rotate-3d.js"></script>
     <script src="./js/rotate-overlay.js"></script>
-    <script src="./js/fontawesome-cleanup.js"></script>
 </body>
 </html>
