--- a/index.html
+++ b/index.html
@@ -70,9 +70,17 @@
                 <p class="whats-highlight">
                     우리는 인터랙티브 웹사이트를 제작합니다
                 </p>
-                <a href="#benefit" class="whats-cta">
-                    살펴보기
-                </a>
+                <div class="whats-scroll-arrow">
+                    <div class="scroll-arrow">
+                        <div class="scroll-arrow__icon">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M7 13L12 18L17 13" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M7 6L12 11L17 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                        </div>
+                        <div class="scroll-arrow__text">스크롤하여 더 알아보기</div>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="benefit-section" id="benefit">
