--- a/index.html
+++ b/index.html
@@ -72,6 +72,17 @@
                         클릭 한 번으로<br>
                         고객의 시선을 끌어당긴다면?
                     </h1>
+                    <div class="whats-scroll-arrow">
+                        <div class="scroll-arrow">
+                            <div class="scroll-arrow__icon">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M7 13L12 18L17 13" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M7 6L12 11L17 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                            </div>
+                            <div class="scroll-arrow__text">Scroll</div>
+                        </div>
+                    </div>
                 </div>
             </section>
             <section class="whats-section" id="whats-2" data-section="2">
@@ -110,6 +121,8 @@
             <!-- 스크롤 스페이서 - 각 섹션을 위한 스크롤 영역 확보 -->
             <div class="whats-scroll-spacer"></div>
         </div>
+
+        <!-- Benefit 섹션 -->
         <section class="benefit-section" id="benefit-1">
             <div class="benefit-headline">
                 <h2 class="benefit-headline__title">
