--- a/index.html
+++ b/index.html
@@ -87,16 +87,16 @@
             </section>
             <section class="whats-section" id="whats-2" data-section="2">
                 <div class="whats-container">
-                    <p class="whats-subtitle">
-                        단순히 '보여주는' 것을 넘어, 직접 '느끼게' 하세요.
+                    <p class="whats-description">
+                        스크롤에 반응하고, 클릭에 살아나는 웹
                     </p>
                 </div>
             </section>
             <section class="whats-section" id="whats-3" data-section="3">
                 <div class="whats-container">
-                    <p class="whats-description">
-                        스크롤에 반응하고, 클릭에 살아나는 웹.<br>
-                        당신의 브랜드를 '경험'하게 하세요.
+                    <p class="whats-subtitle">
+                        <span class="whats-subtitle-line1">단순히 '보여주는' 것을 넘어,</span><br>
+                        <span class="whats-subtitle-line2">직접 '느끼게' 하세요.</span>
                     </p>
                 </div>
             </section>
