--- a/index.html
+++ b/index.html
@@ -69,8 +69,12 @@
             <section class="whats-section active" id="whats-1" data-section="1">
                 <div class="whats-container">
                     <h1 class="whats-main-title">
-                        클릭 한 번으로<br>
-                        고객의 시선을 끌어당긴다면?
+                        <span class="title-line">
+                            <span class="char">클</span><span class="char">릭&nbsp;</span><span class="char"> </span><span class="char">한&nbsp;</span><span class="char"> </span><span class="char">번</span><span class="char">으</span><span class="char">로</span>
+                        </span>
+                        <span class="title-line">
+                            <span class="char">고</span><span class="char">객</span><span class="char">의&nbsp;</span><span class="char"> </span><span class="char">시</span><span class="char">선</span><span class="char">을&nbsp;</span><span class="char"> </span><span class="char">끌</span><span class="char">어</span><span class="char">당</span><span class="char">긴</span><span class="char">다</span><span class="char">면</span><span class="char">?</span>
+                        </span>
                     </h1>
                     <div class="whats-scroll-arrow">
                         <div class="scroll-arrow">
