--- a/index.html
+++ b/index.html
@@ -207,17 +207,30 @@
                     <img src="images/04-kkanyang/img-131.png" class="wheel-image" alt="이미지 131">
                     <img src="images/04-kkanyang/img-132.png" class="wheel-image" alt="이미지 132">
                 </div>
+                <!-- 이미지 전환 상태바 -->
+                <div class="wheel-progress-bar">
+                    <div class="wheel-progress-bar__fill"></div>
+                </div>
+                <div class="scroll-arrow__container">
+                    <div class="scroll-arrow__wrapper">
+                        <div class="scroll-arrow__icon">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M7 13L12 18L17 13" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M7 6L12 11L17 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                        </div>
+                        <div class="scroll-arrow__text">Scroll</div>
+                    </div>
+                </div>
+
             </section>
             
-            <!-- 첫 번째 섹션 - 격자 효과와 함께 (맨 앞 레이어) -->
-            <section class="whats-section whats-section--first">
-                <div class="whats-section__bg bg-1">
-                    <!-- 격자 컨테이너는 JavaScript로 동적 생성됨 -->
-                </div>
+            <!-- 중간 섹션 - intro와 first 사이 -->
+            <section class="whats-section whats-section--middle">
+                <div class="whats-section__bg bg-middle"></div>
                 <div class="whats-section__content">
                     <h1 class="whats-section__title">
-                        클릭 한 번으로<br>
-                        고객의 시선을 끌어당긴다면?
+                        스크롤에 살아나고
                     </h1>
                 </div>
                 <div class="scroll-arrow__container">
@@ -228,6 +241,30 @@
                                 <path d="M7 6L12 11L17 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                         </div>
+                        <div class="scroll-arrow__text">Scroll</div>
+                    </div>
+                </div>
+            </section>
+            
+            <!-- 첫 번째 섹션 - 격자 효과와 함께 (맨 앞 레이어) -->
+            <section class="whats-section whats-section--first">
+                <div class="whats-section__bg bg-1">
+                    <!-- 격자 컨테이너는 JavaScript로 동적 생성됨 -->
+                </div>
+                <div class="whats-section__content">
+                    <h1 class="whats-section__description">
+                        마우스를 움직여보세요.
+                    </h1>
+                </div>
+                <div class="scroll-arrow__container">
+                    <div class="scroll-arrow__wrapper">
+                        <div class="scroll-arrow__icon">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M7 13L12 18L17 13" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M7 6L12 11L17 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                        </div>
+                        <div class="scroll-arrow__text">Scroll</div>
                     </div>
                 </div>
             </section>
