--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         <div class="main-screen__container">
             <!-- intro 섹션 - wheel move 효과 -->
             <section class="whats-section whats-section--intro">
+                <div class="whats-section__bg bg-intro"></div>
                 <div class="wheel-move-container">
                     <img src="images/04-kkanyang/img-001.png" class="wheel-image active" alt="이미지 1">
                     <img src="images/04-kkanyang/img-002.png" class="wheel-image" alt="이미지 2">
