--- a/index.html
+++ b/index.html
@@ -290,6 +290,27 @@
                     </div>
                 </div>
             </section>
+            
+            <!-- 세 번째 섹션 -->
+            <section class="whats-section whats-section--third">
+                <div class="whats-section__bg bg-3"></div>
+                <div class="whats-section__content">
+                    <h1 class="whats-section__title">
+                        클릭에 살아나는 웹
+                    </h1>
+                </div>
+                <div class="scroll-arrow__container">
+                    <div class="scroll-arrow__wrapper">
+                        <div class="scroll-arrow__icon">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M7 13L12 18L17 13" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M7 6L12 11L17 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                        </div>
+                        <div class="scroll-arrow__text">Scroll</div>
+                    </div>
+                </div>
+            </section>
         </div>
     </main>
 
