--- a/index-copy.html
+++ b/index-copy.html
@@ -29,7 +29,7 @@
                 스마트폰을 가로모드로 전환해주세요!
             </div>
             <div class="rotate-overlay__subtitle">
-                더 나은 사용자 경험을 위해 가로모드를 권장합니다
+                더 나은 사용자 경험을 위해 데스크탑을 권장합니다
             </div>
         </div>
     </div>
