--- a/index.html
+++ b/index.html
@@ -230,9 +230,7 @@
             <section class="whats-section whats-section--middle">
                 <div class="whats-section__bg bg-middle"></div>
                 <div class="whats-section__content">
-                    <h1 class="whats-section__title">
-                        스크롤에 움직이며
-                    </h1>
+                    <h1 class="whats-section__title">스크롤에 움직이며</h1>
                 </div>
                 <div class="scroll-arrow__container">
                     <div class="scroll-arrow__wrapper">
@@ -274,9 +272,7 @@
             <section class="whats-section whats-section--second">
                 <div class="whats-section__bg bg-2"></div>
                 <div class="whats-section__content">
-                    <h1 class="whats-section__title">
-                        마우스에 반응하고,<br>
-                    </h1>
+                    <h1 class="whats-section__title">마우스에 반응하는 웹</h1>
                 </div>
                 <div class="scroll-arrow__container">
                     <div class="scroll-arrow__wrapper">
@@ -296,7 +292,7 @@
                 <div class="whats-section__bg bg-3"></div>
                 <div class="whats-section__content">
                     <h1 class="whats-section__title">
-                        클릭에 살아나는 웹
+                        우리는 인터랙티브 웹사이트를 제작합니다.
                     </h1>
                 </div>
                 <div class="scroll-arrow__container">
