--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             <section class="whats-section whats-section--second">
                 <div class="whats-section__bg bg-2"></div>
                 <div class="whats-section__content">
-                    <h1 class="whats-section__title">마우스에 반응하는 웹</h1>
+                    <h1 class="whats-section__title">마우스에 반응하는</h1>
                 </div>
                 <div class="scroll-arrow__container">
                     <div class="scroll-arrow__wrapper">
@@ -291,9 +291,7 @@
             <section class="whats-section whats-section--third">
                 <div class="whats-section__bg bg-3"></div>
                 <div class="whats-section__content">
-                    <h1 class="whats-section__title">
-                        우리는 인터랙티브 웹사이트를 제작합니다.
-                    </h1>
+                    <h1 class="whats-section__title">인터랙티브 웹사이트를 제작합니다.</h1>
                 </div>
                 <div class="scroll-arrow__container">
                     <div class="scroll-arrow__wrapper">
