--- a/index.html
+++ b/index.html
@@ -307,6 +307,46 @@
             </section>
         </div>
     </main>
+    
+    <!-- 메인 컨텐츠 -->
+    <main class="main-content">
+        <div class="main-content__container">
+            <section class="benefit-section" id="benefit-1">
+                <div class="benefit-headline">
+                    <h2 class="benefit-headline__title">
+                        둘 중 어느 곳에 시선이 머무르시나요?
+                    </h2>
+                </div>
+                <div class="benefit-container">
+                    <div class="benefit-left">
+                        <h2 class="benefit-left__title">일반적인 웹사이트</h2>
+                        <div class="benefit-left__model">
+                            <div class="static-model-placeholder">
+                                <img src="images/01-index-images/02-static-chair.jpg" alt="정적 이미지" class="static-chair-image">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="benefit-right">
+                        <h2 class="benefit-right__title">인터랙티브 웹사이트</h2>
+                        <div class="benefit-right__content">
+                            <!-- 3D 모델 표시 영역 -->
+                            <div class="rotate-3d__model-container">
+                                <div class="rotate-3d__instruction">마우스 드래그 및 스크롤 해보세요</div>
+                                <div class="rotate-3d__model" id="rotate-3d__model"></div>
+                            </div>
+
+                            <!-- 푸터 정보 영역 -->
+                            <div class="rotate-3d__footer">
+                                <div class="rotate-3d__footer-column">2025.06.19</div>
+                                <div class="rotate-3d__footer-column">BIAIS</div>
+                                <div class="rotate-3d__footer-column">Interactive</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </main>
 
     <!-- ES 모듈 방식으로 분리된 JS 파일 로드 -->
     <script type="module" src="./js/intro.js"></script>
